<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:theme="@style/AppTheme"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/lable_email_address"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#141414"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_login_email"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/lable_password"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_login_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/text_pass"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#141414"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_login_password"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/login_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/lable_btn_login"
            android:textColor="#141414" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20sp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/lable_forgot_password"
            android:textColor="#C83B3B"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>